--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/jnt2811/vi-learning-v2#readme",
   "dependencies": {
+    "body-parser": "^1.20.0",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.0.1",
